Added social link

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     </div>
     <table>
         <tr>
-            <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i class="fab fa-linkedin"></i></a>
+            <td class="animated zoomIn" style="animation-delay:2.2s;"><a href="https://www.linkedin.com/in/mradityakumar/" class="social"><i class="fab fa-linkedin"></i></a>
             </td>
-            <td class="animated zoomIn" style="animation-delay:2.5s;"><a class="social"><i
+            <td class="animated zoomIn" style="animation-delay:2.5s;"><a href="https://github.com/AdityaKumar28" class="social"><i
                     class="fab fa-github"></i></a></td>
-            <td class="animated zoomIn" style="animation-delay:2.7s;"><a class="social"><i class="fab fa-facebook"></i></a>
+            <td class="animated zoomIn" style="animation-delay:2.7s;"><a href="https://www.facebook.com/adityak2804/" class="social"><i class="fab fa-facebook"></i></a>
             </td>
-            <td class="animated zoomIn" style="animation-delay:3.0s;"><a class="social"><i class="fab fa-instagram"></i></a>
+            <td class="animated zoomIn" style="animation-delay:3.0s;"><a href="https://www.instagram.com/ethereal.lad" class="social"><i class="fab fa-instagram"></i></a>
             </td>
         </tr>
     </table>
@@ -168,38 +168,38 @@
     <section>
         <h1>skills</h1>
         <p>
-        <table>
-            <tr>
-                <td>Languages</td>
-                <td>:</td>
-                <td>Java, GoLang, Javascript</td>
-            </tr>
-            <tr>
-                <td>Frameworks</td>
-                <td>:</td>
-                <td>Spring, Spring Boot</td>
-            </tr>
-            <tr>
-                <td>Databases</td>
-                <td>:</td>
-                <td>MySql, PostgreSQL, MongoDB</td>
-            </tr>
-            <tr>
-                <td>Operating System</td>
-                <td>:</td>
-                <td>Mac OS, Linux, Windows</td>
-            </tr>
-            <tr>
-                <td>Messaging Queues</td>
-                <td>:</td>
-                <td>Apache Kafka, GCP Pub/Sub, AWS SQS, RabbitMQ</td>
-            </tr>
-            <tr>
-                <td>Other</td>
-                <td>:</td>
-                <td>Docker, Git, Github, </td>
-            </tr>
-        </table>
+            <table>
+                <tr>
+                    <td>Languages</td>
+                    <td>:</td>
+                    <td>Java, GoLang, Javascript</td>
+                </tr>
+                <tr>
+                    <td>Frameworks</td>
+                    <td>:</td>
+                    <td>Spring, Spring Boot</td>
+                </tr>
+                <tr>
+                    <td>Databases</td>
+                    <td>:</td>
+                    <td>MySql, PostgreSQL, MongoDB</td>
+                </tr>
+                <tr>
+                    <td>Operating System</td>
+                    <td>:</td>
+                    <td>Mac OS, Linux, Windows</td>
+                </tr>
+                <tr>
+                    <td>Messaging Queues</td>
+                    <td>:</td>
+                    <td>Apache Kafka, GCP Pub/Sub, AWS SQS, RabbitMQ</td>
+                </tr>
+                <tr>
+                    <td>Other</td>
+                    <td>:</td>
+                    <td>Docker, Git, Github, </td>
+                </tr>
+            </table>
         </p>
     </section>
 </div>
@@ -209,12 +209,12 @@
     <section>
         <h2>contact me</h2>
         <p>
-        <form onsubmit="closecontact()">
-            <input placeholder="name" required type="text">
-            <input placeholder="email" required type="email"><br>
-            <textarea placeholder="your message" required rows="5"></textarea><br>
-            <button class="btn_one">send</button>
-        </form>
+            <form onsubmit="closecontact()">
+                <input placeholder="name" required type="text">
+                <input placeholder="email" required type="email"><br>
+                <textarea placeholder="your message" required rows="5"></textarea><br>
+                <button class="btn_one">send</button>
+            </form>
         </p>
     </section>
 </div>
