--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     class="fab fa-github"></i></a></td>
             <td class="animated zoomIn" style="animation-delay:2.7s;"><a href="https://www.facebook.com/adityak2804/" class="social"><i class="fab fa-facebook"></i></a>
             </td>
-            <td class="animated zoomIn" style="animation-delay:3.0s;"><a href="https://www.instagram.com/ethereal.lad" class="social"><i class="fab fa-instagram"></i></a>
+            <td class="animated zoomIn" style="animation-delay:3.0s;"><a href="mailto:adityak2804@gmail.com?subject=Hey Aditya!" class="social"><i class="fas fa-envelope" aria-hidden="true"></i></a>
             </td>
         </tr>
     </table>
